force-app/main/default/objects/Child_Sports_Health__c/Child_Sports_Health__c.object-meta.xml
<CustomObject>
    <label>Child Sports &amp; Health</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Child Sports &amp; Health Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Children&apos;s Sports &amp; Health</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>