force-app/main/default/objects/Child_Sports_Health__c/fields/Activity_Rating__c.field-meta.xml
<CustomField>
    <fullName>Activity_Rating__c</fullName>
    <inlineHelpText>Select physical activity level</inlineHelpText>
    <label>Activity Rating</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extremely Low</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Extremely High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>