force-app/main/default/objects/Child_Sports_Health__c/fields/Child_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_First_Name__c</fullName>
    <inlineHelpText>Enter child first name</inlineHelpText>
    <label>Child First Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>