force-app/main/default/objects/Child_Sports_Health__c/fields/Child_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Last_Name__c</fullName>
    <inlineHelpText>Enter child last name</inlineHelpText>
    <label>Child Last Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>