force-app/main/default/objects/Child_Sports_Health__c/fields/Child_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Name__c</fullName>
    <label>Child Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>