force-app/main/default/objects/Child_Sports_Health__c/fields/Parent_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_First_Name__c</fullName>
    <inlineHelpText>Enter the parent or guardian first name</inlineHelpText>
    <label>Parent First Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>