force-app/main/default/objects/Child_Sports_Health__c/fields/Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Name__c</fullName>
    <label>Parent Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>