force-app/main/default/objects/Child_Sports_Health__c/fields/Parent_Phone__c.field-meta.xml
<CustomField>
    <fullName>Parent_Phone__c</fullName>
    <inlineHelpText>Enter contact phone number</inlineHelpText>
    <label>Parent Phone</label>
    <type>Phone</type>
</CustomField>