force-app/main/default/objects/Child_Sports_Health__c/fields/Sports__c.field-meta.xml
<CustomField>
    <fullName>Sports__c</fullName>
    <label>Sports</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Baseball</fullName>
            </value>
            <value>
                <fullName>Football</fullName>
            </value>
            <value>
                <fullName>Soccer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>