force-app/main/default/objects/Child_Sports_Health__c/validationRules/At_Least_One_Sport_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>At_Least_One_Sport_Required</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
  INCLUDES(Sports__c, &quot;Baseball&quot;) ||
  INCLUDES(Sports__c, &quot;Football&quot;) ||
  INCLUDES(Sports__c, &quot;Soccer&quot;)
)</errorConditionFormula>
    <errorDisplayField>Sports__c</errorDisplayField>
    <errorMessage>Please select at least one sport</errorMessage>
</ValidationRule>