force-app/main/default/objects/Child_Sports_Health__c/validationRules/Valid_Phone_Number_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Phone_Number_Format</fullName>
    <active>true</active>
    <description>Ensures phone number contains only digits, parentheses, hyphens, spaces, and plus sign when provided</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Parent_Phone__c)),
  LEN(Parent_Phone__c) &lt; 10
)</errorConditionFormula>
    <errorDisplayField>Parent_Phone__c</errorDisplayField>
    <errorMessage>Please enter a valid phone number with at least 10 digits</errorMessage>
</ValidationRule>