force-app/main/default/objects/Child_Sports_Health__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Child_Name__c</columns>
    <columns>Parent_Name__c</columns>
    <columns>Parent_Phone__c</columns>
    <columns>Sports__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>