force-app/main/default/objects/Child_Sports_Health__c/listViews/All_Child_Sports_and_Health_Records.listView-meta.xml
<ListView>
    <fullName>All_Child_Sports_and_Health_Records</fullName>
    <columns>NAME</columns>
    <columns>Parent_First_Name__c</columns>
    <columns>Parent_Last_Name__c</columns>
    <columns>Child_First_Name__c</columns>
    <columns>Child_Last_Name__c</columns>
    <columns>Sports__c</columns>
    <columns>Activity_Rating__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Child Sports and Health Records</label>
</ListView>