force-app/main/default/objects/Child_Sports_Health__c/listViews/Low_Activity_Level.listView-meta.xml
<ListView>
    <fullName>Low_Activity_Level</fullName>
    <columns>NAME</columns>
    <columns>Parent_First_Name__c</columns>
    <columns>Parent_Last_Name__c</columns>
    <columns>Child_First_Name__c</columns>
    <columns>Child_Last_Name__c</columns>
    <columns>Sports__c</columns>
    <columns>Activity_Rating__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Activity_Rating__c</field>
        <operation>equals</operation>
        <value>Extremely Low,Low</value>
    </filters>
    <label>Low Activity Level</label>
</ListView>