force-app/main/default/objects/Child_Sports_Health__c/listViews/Recently_Created.listView-meta.xml
<ListView>
    <fullName>Recently_Created</fullName>
    <columns>NAME</columns>
    <columns>Parent_First_Name__c</columns>
    <columns>Parent_Last_Name__c</columns>
    <columns>Child_First_Name__c</columns>
    <columns>Child_Last_Name__c</columns>
    <columns>Sports__c</columns>
    <columns>Activity_Rating__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Recently Created</label>
</ListView>